phase4 complete